[package]
name = "down_href"
version = "0.1.0"
authors = ["l-const <const-l@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nipper = "0.1.9"
reqwest = { version = "0.11" , features = ["blocking"] }
tokio = { version = "1.4.0", features = ["full"] }
futures = "0.3.12"
clap = "2.33.3"
